<resources>
    <string name="app_name">E-Commerce_Store-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="store">Store</string>

    <string name="e_commerce_store">E Commerce Store</string>
    <string name="version">version 0.0.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">about</string>
    <string name="constraints">constraints</string>
    <string name="faq">faq</string>
    <string name="guides">guides</string>
    <string name="support">support</string>
    <string name="tips">tips</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="asguest">asGuest</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password1">Password</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="signup1">SignUp</string>
    <string name="cancel">Cancel</string>
    <string name="todo">todo</string>
    <string name="home">home</string>
    <string name="camera">camera</string>
    <string name="search">search</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Notification">Notification</string>
    <string name="welcome_our">
       Welcome,\nOur Fashions App
    </string>
    <string name="welcome">Welcome,</string>
    <string name="our_fashions_app">Our Fashions App</string>
    <string name="search_">Search...</string>
    <string name="insert_the_product_photo_from_your_device_n_either_through_the_camera_n_or_from_the_gallery">Insert the product photo From your Device,\n Either through the Camera \n or from the Gallery ..</string>
    <string name="your_product">YOUR PRODUCT</string>
    <string name="submit">SUBMIT</string>
</resources>