<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemHomeBottomBar"
        android:title="@string/Home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/Black"
        app:cnb_iconColor="@color/black"
        app:cnb_backgroundColor="@color/highlighter" />

    <item
        android:id="@+id/itemNotificationBottomBar"
        android:title="@string/Notification"
        android:icon="@drawable/ic_notification"
        app:cnb_iconColor="@color/black"
        app:cnb_backgroundColor="@color/highlighter"/>

    <item
        android:id="@+id/itemProfileBottomBar"
        android:title="@string/Profile"
        android:icon="@drawable/ic_profile"
        app:cnb_iconColor="@color/black"
        app:cnb_backgroundColor="@color/highlighter"/>
</menu>