<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAppearance="@style/welcome_our"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:lineSpacingExtra="1sp"
            android:translationY="-0.55sp"
            android:gravity="top" />

        <TextView
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:text="@string/our_fashions_app"
            android:textAppearance="@style/welcome_our"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/sec_text_color"
            android:layout_marginStart="20dp"
            android:lineSpacingExtra="1sp"
            android:translationY="-0.55sp"
            android:gravity="top" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="50dp"
                app:cardBackgroundColor="#F3F4F5">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/todo" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/search_"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="55dp"
                    android:textColor="#AAAAAA"
                    android:textSize="16sp"/>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_filtter_search"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

    </LinearLayout>

</FrameLayout>